# open-data-stack

./: .gitignore  README.md
dagster/: pyproject.toml  readme.md
dagster/stargazer/: setup.py  stage.db
dagster/stargazer/assets_modern_data_stack/: repository.py
dagster/stargazer/assets_modern_data_stack/assets/: forecasting.py  stargazer.py
dagster/stargazer/assets_modern_data_stack/utils/: constants.py  setup_airbyte.py
dagster/stargazer/transformation_dbt/: .sqlfluff  .sqlfluffignore  dbt_project.yml  packages.yml  profiles.yml
dagster/stargazer/transformation_dbt/config/: .user.yml  profiles.yml
dagster/stargazer/transformation_dbt/models/mart/: mart_gh_cumulative.sql  mart_gh_stargazer.sql  schema.yml
dagster/stargazer/transformation_dbt/models/staging/: sources.yml
transformation_dbt/: dbt_profiles.yml  dbt_project.yml  poetry.toml  pyproject.toml  readme.md
transformation_dbt/macros/cross_db_utils/: json_operations_oss.sql
transformation_dbt/models/1-staging/: src_airbyte_local_db.yml  stg_airbyte__actor.sql  stg_airbyte__actor_definition.sql  stg_airbyte__attempts.sql  stg_airbyte__connection.sql  stg_airbyte__jobs.sql  stg_airbyte__workspace.sql
transformation_dbt/models/2-core/: core_airbyte_sync_status.sql
transformation_dbt/models/3-mart/: mart_sync_success.sql  mart_sync_success_day.sql
visualization/metabase/: metabase.db.mv.db  metabase.db.trace.db  readme.md
visualization/rill_data/: jobs.csv  readme.md  rill.yaml
visualization/rill_data/dashboards/: stargazer_dashboard.yaml
visualization/rill_data/models/: model.sql  rss_de_feeds.sql  salary_de.sql  stargazer.sql
