[tool.poetry]
name = "airbyte-monitoring"
version = "0.1.0"
description = ""
authors = ["Simon Späti <simon@airbyte.io>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "1.2.0"
dbt-postgres="1.2.0"
sqlfluff="1.2.0"
sqlfluff-templater-dbt="1.2.0"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.14.5"
pytest = "^7.1.2"
taskipy = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = { cmd = "dbt test", help= "run dbt tests for this project" }
update = { cmd = "poetry update", help = "update Python dependencies with Poetry" }
setup_dbt = { cmd = "dbt deps", help = "setup dbt deps" }
setup_dbt_profile1 = { cmd = "[ -f old ] && mv ~/.dbt/profiles.yml ~/.dbt/profiles_backup.yml", help = "setup dbt profile" }
setup_dbt_profile2 = { cmd = "cp dbt_profiles.yml ~/.dbt/profiles.yml", help = "setup dbt profile" }
run = { cmd = "dbt run", help = "run dbt" }
sql_format = { cmd = "sqlfuff fix", help = "sqlfluff fix and format" }
sql_lint = { cmd = "sqlfuff lint", help = "sqlfluff lint" }


[tool.black]
line-length = 150
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | target
)/
'''

[tool.isort]
profile = "black"
force_single_line = "True"

